[package]
name = "docnote"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
candle-core = "0.8.0"
candle-nn = "0.8.0"
hf-hub = "0.3.2"
phf = {version = "0.11", features = ["macros"]}
serde = "1.0.215"
serde_json = "1.0.133"
tokenizers = "0.20.3"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = {version = "0.6.2", features = ["cors", "trace"]}
tracing = "0.1.40"
